Trapping rain water problem naive implementation has been improved.